# file_list_flattener

./: Cargo.toml
src/: absolute_ignore.rs  batch.rs  cli.rs  filesystem_builder.rs  ignore_node.rs  job.rs  main.rs  matcher.rs
src/filesystem/: builder.rs  checker.rs  mod.rs  template.rs  tmp_filesystem.rs
