[package]
name = "file_list_flattener"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
default-run = "flf"

[[bin]]
name = "flf"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = "3.2.20"
glob = "0.3.0"
regex = "1.6.0"
walkdir = "2.3.2"
